--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
 .idea/
 database/modelas/__pycache__/
+database/models/__pycache__/db_conn.cpython-37.pyc
+database/models/__pycache__/db_conn.cpython-37.pyc
+
+
 
