clean out unnecesary files [#160340453]

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 database/modelas/__pycache__/
 database/models/__pycache__/db_conn.cpython-37.pyc
 database/models/__pycache__/db_conn.cpython-37.pyc
+app/
 
 
 
